(FEAT): Added a new image and fixed the image container layout bug

--- a/src/app/landing/landing.component.scss
+++ b/src/app/landing/landing.component.scss
@@ -156,14 +156,14 @@
   grid-gap: 1rem;
     .work-card {
       background-color: rgb(216, 208, 208) (208, 200, 200);
-      width: 300px;
+      max-width: 300px;
       .image {
-        height: 100%;
+        height: 160px;
         width: 100%;
         img {
           height: 100%;
           width: 100%;
-          object-fit: contain;
+          object-fit: cover;
         }
       }
     }
